--- a/themes/landscape/layout/_partial/head.ejs
+++ b/themes/landscape/layout/_partial/head.ejs
@@ -28,7 +28,7 @@
   <% if (theme.favicon){ %>
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
-  <link href="//fonts.useso.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
+  <!-- <link href="//fonts.gmirror.org/css?family=Source+Code+Pro" rel="stylesheet" type="text/css"> -->
   <%- css('css/style') %>
   <%- partial('google-analytics') %>
 </head>
